eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: "api.hykura.id.vn"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port:
              number: 80
  tls:
  - hosts:
    - api.hykura.id.vn
    secretName: simple-bank-api-cert
